# KnightsTour

./: CMakeLists.txt
gtest/: test_lab.cpp
include/: AIPlayer.hpp  BinaryTree.hpp  BinaryTree.tpp  HumanPlayer.hpp  KnightMove.hpp  KnightTourBoard.hpp  KnightTourGame.hpp  Player.hpp  ScoredMove.hpp
src/: AIPlayer.cpp  HumanPlayer.cpp  KnightTourBoard.cpp  KnightTourGame.cpp  main.cpp
